fix minor layout bug (min height)

--- a/sass/modules/_layouts.scss
+++ b/sass/modules/_layouts.scss
@@ -5,10 +5,6 @@
 //   }
 // }
 
-article {
-  min-height: 600px;
-}
-
 .row {
   padding:.75em 1.5em;
   width:100%;
